# bindlocal-server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  readme.md
.claude/skills/: bindlocal.skill.md
other/load_test/: script.lua
other/nginx_conf/: default.conf
src/: http_server.rs  main.rs  request.rs  response.rs  router.rs  shared.rs  tcp_server.rs
