[package]
name = "bindlocal-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }          #add feature web-socket
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
futures-util = "0.3"                                   # For stream utilities
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
